--- a/index.html
+++ b/index.html
@@ -5,46 +5,29 @@
   <title>Afspraak maken</title>
   <style>
     body { font-family: sans-serif; margin: 20px; }
-    button { margin: 5px; }
-    .datum-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
-      gap: 10px;
-      margin-top: 10px;
-    }
-    .datum-btn {
-      padding: 10px;
-      background: #f0f0f0;
-      border: 1px solid #ccc;
-      cursor: pointer;
-      border-radius: 8px;
-    }
-    .datum-btn:hover {
-      background-color: #cceeff;
-    }
-    .bevestigd {
-      background-color: #b6fcb6;
-      border-color: #2ecc71;
-    }
+    label, button { display: block; margin: 10px 0; }
+    #resultaat { margin-top: 15px; font-weight: bold; }
   </style>
 </head>
 <body>
   <h2>Welkom bewoner</h2>
 
   <label for="houseNumber">Huisnummer:</label>
-  <input type="text" id="houseNumber" readonly /><br />
+  <input type="text" id="houseNumber" readonly />
 
   <hr />
 
   <button onclick="kiesActie('afspraak')">✅ Afspraak maken</button>
   <button onclick="kiesActie('weigeren')">❌ Ik geef geen toestemming</button>
 
-  <div id="resultaat" style="margin-top:15px; font-weight: bold;"></div>
+  <div id="afspraakSectie" style="display:none;">
+    <label for="datumSelect">Kies een datum:</label>
+    <input type="date" id="datumSelect" />
+    <button onclick="bevestigAfspraak()">📤 Bevestig en verzend</button>
+  </div>
 
-  <div id="datumKeuze" class="datum-grid" style="display:none;"></div>
-
-  <div id="redenKeuze" style="display:none; margin-top: 10px;">
-    <label>Waarom geen toestemming?</label><br />
+  <div id="redenKeuze" style="display:none;">
+    <label>Waarom geen toestemming?</label>
     <select id="redenSelect">
       <option value="Niet beschikbaar">Niet beschikbaar</option>
       <option value="Geen interesse">Geen interesse</option>
@@ -53,8 +36,10 @@
     <button onclick="submitReden()">Verstuur reden</button>
   </div>
 
+  <div id="resultaat"></div>
+
   <script>
-    const scriptUrl = "https://script.google.com/macros/s/AKfycbzsW8Zy-Z93E25qfFefBNdoNoggOprV-21Fs8qn1XOnN4pgj4RPEXqq_tdTZrmKPsE06A/exec"; // Jouw Apps Script URL
+    const scriptUrl = "https://script.google.com/macros/s/AKfycbzsW8Zy-Z93E25qfFefBNdoNoggOprV-21Fs8qn1XOnN4pgj4RPEXqq_tdTZrmKPsE06A/exec";
 
     function getQueryParam(param) {
       const params = new URLSearchParams(window.location.search);
@@ -67,55 +52,34 @@
     }
 
     function kiesActie(type) {
-      clearMessages();
-
-      const huisnummer = document.getElementById("houseNumber").value.trim();
-      if (!huisnummer) {
-        alert("Geen huisnummer gevonden!");
-        return;
-      }
-
+      document.getElementById("resultaat").innerText = "";
       if (type === "afspraak") {
+        document.getElementById("afspraakSectie").style.display = "block";
         document.getElementById("redenKeuze").style.display = "none";
-
-        fetch(`${scriptUrl}?action=getAvailableDates&houseNumber=${encodeURIComponent(huisnummer)}`)
-          .then((res) => res.json())
-          .then((data) => {
-            const div = document.getElementById("datumKeuze");
-            div.innerHTML = "";
-            if (data.length === 0) {
-              div.innerHTML = "<p>Geen beschikbare data gevonden.</p>";
-            } else {
-              data.forEach((datum) => {
-                const btn = document.createElement("button");
-                btn.className = "datum-btn";
-                btn.innerText = datum;
-                btn.onclick = () => bevestigAfspraak(huisnummer, datum, btn);
-                div.appendChild(btn);
-              });
-            }
-            div.style.display = "grid";
-          })
-          .catch(() => {
-            alert("Geen data gevonden of fout bij ophalen.");
-          });
-
       } else if (type === "weigeren") {
-        document.getElementById("datumKeuze").style.display = "none";
+        document.getElementById("afspraakSectie").style.display = "none";
         document.getElementById("redenKeuze").style.display = "block";
       }
     }
 
-    function bevestigAfspraak(huisnummer, datum, knop) {
-      if (!confirm(`Wilt u deze datum bevestigen: ${datum}?`)) return;
+    function bevestigAfspraak() {
+      const huisnummer = document.getElementById("houseNumber").value.trim();
+      const datum = document.getElementById("datumSelect").value;
+
+      if (!datum) {
+        alert("Kies een datum.");
+        return;
+      }
+
+      if (!confirm(`Weet je zeker dat je ${datum} wilt kiezen voor een afspraak?`)) return;
 
       fetch(`${scriptUrl}?action=markAppointment&houseNumber=${encodeURIComponent(huisnummer)}&selectedDate=${encodeURIComponent(datum)}`)
         .then((res) => res.text())
         .then((msg) => {
           document.getElementById("resultaat").innerText = msg;
-          knop.classList.add("bevestigd");
+          document.getElementById("afspraakSectie").style.display = "none";
         })
-        .catch(() => alert("Fout bij bevestigen van afspraak."));
+        .catch(() => alert("Fout bij afspraak maken."));
     }
 
     function submitReden() {
@@ -123,17 +87,11 @@
       alert(`Reden geregistreerd: ${reden}`);
       document.getElementById("redenKeuze").style.display = "none";
       document.getElementById("resultaat").innerText = "Reden geregistreerd, bedankt!";
-      // Optioneel: verstuur reden met fetch
-      // fetch(`${scriptUrl}?action=weigeren&houseNumber=...&reden=...`)
-    }
-
-    function clearMessages() {
-      document.getElementById("resultaat").innerText = "";
-      document.getElementById("datumKeuze").innerHTML = "";
-      document.getElementById("datumKeuze").style.display = "none";
+      // Optioneel: stuur reden ook naar Apps Script
     }
   </script>
 </body>
 </html>
+
 
 
