--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
   <script>
-    const scriptUrl = "https://script.google.com/macros/s/AKfycbzsW8Zy-Z93E25.../exec";
+    const scriptUrl = https://script.google.com/macros/s/AKfycbzMbSqPkUZ_0CHwyQnbgEVFL7PkcYAJH6ek03eLMrSCrTm91xpGhbLWwpxyvpwUY_uI/exec;
     let availableDates = [];
 
     function getQueryParam(param) {
